# basic-prelude

./: .gitignore  .travis.yml  BasicPrelude.hs  ChangeLog.md  CorePrelude.hs  README.md  basic-prelude.cabal  package.yaml  stack.yaml  test-is-a-prelude.hs
src/: CorePrelude.hs
