name:                basic-prelude
version:             0.1.0.0
synopsis:            An enhanced core prelude, meant for building up more complete preludes on top of.

homepage:            https://github.com/snoyberg/basic-prelude
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@snoyman.com

category:            Control
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     BasicPrelude
  build-depends:       base                     >= 4       && < 5
                     , hashable
                     , bytestring
                     , text
                     , transformers
                     , containers
                     , unordered-containers
                     , vector
                     , system-filepath          >= 0.4     && < 0.5

source-repository head
  type:     git
  location: git://github.com/snoyberg/basic-prelude.git
