name:                basic-prelude
version:             0.3.7
synopsis:            An enhanced core prelude; a common foundation for alternate preludes.
description:
    The premise of @basic-prelude@ is that there are a lot of very commonly desired features missing from the standard @Prelude@, such as commonly used operators (@\<$\>@ and @>=>@, for instance) and imports for common datatypes (e.g., @ByteString@ and @Vector@). At the same time, there are lots of other components which are more debatable, such as providing polymorphic versions of common functions.
    .
    So @basic-prelude@ is intended to give a common foundation for a number of alternate preludes. The package provides two modules: @CorePrelude@ provides the common ground for other preludes to build on top of, while @BasicPrelude@ exports @CorePrelude@ together with commonly used list functions to provide a drop-in replacement for the standard @Prelude@.
    .
    Users wishing to have an improved @Prelude@ can use @BasicPrelude@. Developers wishing to create a new prelude should use @CorePrelude@.
    .
    Release history:
    .
    [0.3] Moved a number of exports from @BasicPrelude@ to @CorePrelude@ and vice-versa.
    .
    [0.2] Renamed @BasicPrelude@ to @CorePrelude@ and added a new @BasicPrelude@ module provided a full-featured @Prelude@ alternative. Also added a number of new exports.
    .
    [0.1] Initial version, code taken from @classy-prelude@ with a few minor tweaks.

homepage:            https://github.com/snoyberg/basic-prelude
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman, Dan Burton
maintainer:          michael@snoyman.com

category:            Control, Prelude
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     BasicPrelude, CorePrelude
  build-depends:       base                     >= 4       && < 5
                     , hashable
                     , bytestring
                     , text
                     , transformers
                     , containers
                     , unordered-containers
                     , vector
                     , system-filepath          >= 0.4     && < 0.5
                     , ReadArgs                 >= 1.2     && < 1.3
                     , lifted-base
                     , safe

source-repository head
  type:     git
  location: git://github.com/snoyberg/basic-prelude.git
