name:                basic-prelude
version:             0.6.1
synopsis:            An enhanced core prelude; a common foundation for alternate preludes.
description:
    The premise of @basic-prelude@ is that there are a lot of very commonly desired features missing from the standard @Prelude@, such as commonly used operators (@\<$\>@ and @>=>@, for instance) and imports for common datatypes (e.g., @ByteString@ and @Vector@). At the same time, there are lots of other components which are more debatable, such as providing polymorphic versions of common functions.
    .
    So @basic-prelude@ is intended to give a common foundation for a number of alternate preludes. The package provides two modules: @CorePrelude@ provides the common ground for other preludes to build on top of, while @BasicPrelude@ exports @CorePrelude@ together with commonly used list functions to provide a drop-in replacement for the standard @Prelude@.
    .
    Users wishing to have an improved @Prelude@ can use @BasicPrelude@. Developers wishing to create a new prelude should use @CorePrelude@.

homepage:            https://github.com/snoyberg/basic-prelude
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman, Dan Burton
maintainer:          michael@snoyman.com
extra-source-files:  README.md ChangeLog.md

category:            Control, Prelude
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     BasicPrelude, CorePrelude
  build-depends:       base                     >= 4.6     && < 5
                     , hashable
                     , bytestring
                     , text
                     , transformers
                     , containers
                     , unordered-containers
                     , vector
                     , ReadArgs                 >= 1.2     && < 1.3
                     , lifted-base
                     , safe
                     , filepath

source-repository head
  type:     git
  location: git://github.com/snoyberg/basic-prelude.git
